--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ ll touch harry-file
    12  cat /etc/group
    13  history
 ##########################################################################################################################
+   useradd sanjay
+   passwd sanjay
+   vim /etc/sudoers
+   sanjay  ALL = ADD (ALL)
+   sudo su sanjay
+   useradd pooja
+   passwd pooja
+
+##########################################################################################################################
 TOMCAT-SERVER
 * first 3 instances dev-server , jenkins-server , web-server , tomcat-server
 dev-server = t2.micro , size = 12
