--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@ ll touch harry-file
    useradd sanjay
    passwd sanjay
    vim /etc/sudoers
-   sanjay  ALL = ADD (ALL)
+whereis useradd 
+whereis passwd
+   user1 = add ....useradd user2 , .....passwd user2
+   
    sudo su sanjay
+
    useradd pooja
    passwd pooja
 
