--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ bash
     6  systemctl enable jenkins
     7  systemctl start jenkins
     8  systemctl status jenkins
-go to the browser and copy ip-address:8080 and create webhook
+go to ithe browser and copy instance ip-address:8080 and create webhook
 after sign in install plugins like maven , deploy to container , github integration then restart the jenkins
 yum install maven
 CONNECT TO APACHE SERVER
