--- a/index.html
+++ b/index.html
@@ -505,5 +505,44 @@ AWS
    10  rmdir uday
    11  cd
    12  history)
- 
+ #############################################################################################################################
+  yum update -y
+    2  yum install automake fuse fuse-devel gcc-c++ git libcurl-devel libxml2-devel make openssl-devel
+    3  git clone https://github.com/s3fs-fuse/s3fs-fuse.git
+    4  ll
+    5  curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    6  unzip awscliv2.zip
+    7  sudo ./aws/install
+    8  aws --version
+    9  aws configure
+   10  ll
+   11  cd .aws/
+   12  ls
+   13  cat config
+   14  cat credentials
+   15    cd
+   16  sudo apt-get install automake autotools-dev fuse g++ git libcurl4-gnutls-dev libfuse-dev libssl-dev libxml2-dev make pkg-config
+   17  apt-get install automake autotools-dev fuse g++ git libcurl4-gnutls-dev libfuse-dev libssl-dev libxml2-dev make pkg-config
+   18  yum install automake fuse fuse-devel gcc-c++ git libcurl-devel libxml2-devel make openssl-devel
+   19  git clone https://github.com/s3fs-fuse/s3fs-fuse.git
+   20  ll
+   21  /autogen.sh
+   22  cd s3fs-fuse
+   23  /autogen.sh
+   24  cd s3fs-fuse/
+   25  ./autogen.sh
+   26  ./configure --prefix=/usr --with-openssl
+   27  make
+   28  make install
+   29  which s3fs
+   30  touch /etc/passwd-s3fs
+   31  vim /etc/passwd-s3fs
+   32  chmod 640 /etc/passwd-s3fs
+   33  cd
+   34  s3fs sriamju1234 /mnt -o passwd_file=/etc/passwd-s3fs
+   35  df -h
+   36  cd /mnt
+   37  ll
+   38  touch dev.txt{1..5}
+   39  history
 
