--- a/index.html
+++ b/index.html
@@ -1000,6 +1000,15 @@ you can also disable it uh will see a option to remove
  in google ip:8080
  ---------------------------
 
+ docker run -d --name web7 -p 8082:80 nginx
+     docker exec -it web7 bash
+  cd /usr/share/nginx/html
+    2  cat > index.html
+ ip:8082
+ 
+
+
+ 
 #################################################################################################################################################33333333################333
  ########################################################################################################################################################################
 
