--- a/index.html
+++ b/index.html
@@ -1305,6 +1305,30 @@ localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python3
  #########################################################################################################################################################################
 
  TERRAFORM
+
+
+
+  
+mkdir project
+    2  cd project
+    3  vim server.tf
+    4  terraform init
+    5  cd
+    6  sudo dnf install -y dnf-plugins-core
+    7  sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
+    8  sudo dnf -y install terraform
+    9  curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+   10  unzip awscliv2.zip
+   11  sudo ./aws/install
+   12  terraform --version
+   13  cd project
+   14  ll
+   15  terraform init
+   16  vim server.tf
+   17  terraform fmt
+   18  terraform validate
+   19  terraform plan
+   20  terraform apply
 ----------------------------------------------------------------------------------------------=----------------------------------------------------------------------------
  this is for adding the inbound and outbound rules
  vim server.tf
@@ -1434,6 +1458,72 @@ chmod 400 lti-mahape-key.pem
    cd /data
    touch sri.txt{1..5}
    ll
+
+
+
+
+
+
+   resource "aws_security_group" "web_access23" {
+  name        = "web_access23"
+  description = "Allow traffic"
+ 
+  tags = {
+    Name = "web_access23"
+  }
+}
+ 
+resource "aws_vpc_security_group_ingress_rule" "allow_http" {
+  security_group_id = aws_security_group.web_access23.id
+  cidr_ipv4         = "0.0.0.0/0"
+  from_port         = 80
+  ip_protocol       = "tcp"
+  to_port           = 80
+}
+ 
+resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
+  security_group_id = aws_security_group.web_access23.id
+  cidr_ipv4         = "0.0.0.0/0"
+  from_port         = 22
+  ip_protocol       = "tcp"
+  to_port           = 22
+}
+ 
+resource "aws_vpc_security_group_ingress_rule" "allow_https" {
+  security_group_id = aws_security_group.web_access23.id
+  cidr_ipv4         = "0.0.0.0/0"
+  from_port         = 443
+  ip_protocol       = "tcp"
+  to_port           = 443
+}
+resource "aws_vpc_security_group_egress_rule" "allow_all_taraffic" {
+  security_group_id = aws_security_group.web_access23.id
+  cidr_ipv4         = "0.0.0.0/0"
+  ip_protocol       = "-1"
+}
+ 
+#ec2 instance code starts here
+resource "aws_instance" "custom-server" {
+  ami               = "ami-05ffe3c48a9991133"
+  availability_zone = "us-east-1a"
+  instance_type     = "t2.micro"
+  security_groups   = ["${aws_security_group.web_access23.name}"]
+  key_name          = "Milestone-key"
+ 
+ 
+  user_data = <<-EOF
+        #!/bin/bash
+        sudo yum install httpd -y
+        sudo systemctl start httpd
+        sudo systemctl enable httpd
+        echo "<h1>custom  webserver using terraform</h1>" | sudo tee /var/www/html/index.html
+  EOF
+  tags = {
+    Name     = "hello-India"
+    Stage    = "testing"
+    Location = "India"
+  }
+}
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------
    
 
