--- a/index.html
+++ b/index.html
@@ -2213,6 +2213,7 @@ resource "aws_instance" "test" {
         }
     ]
 }
+     in github repo open variables and environments add access key and secret key 
              in repo add a new file and in the top place .github/workflows/main.yml
 name: Deploy to AWS S3
 on:
