--- a/index.html
+++ b/index.html
@@ -1887,11 +1887,11 @@ data "aws_ami" "ubuntu" {
   }
 
   filter {
-    name   = "virtualization-type"
+    name   = "virtualization-type"              #Terraform to only look for AMIs that use HVM (Hardware Virtual Machine) virtualization.
     values = ["hvm"]
   }
 
-  owners = ["099720109477"] # Canonical
+  owners = ["099720109477"] # Canonical             #This restricts the search to AMIs owned by a specific AWS account.
 }
 
 resource "aws_instance" "web" {
